[gd_scene load_steps=18 format=3 uid="uid://b757hv6r53j0f"]

[ext_resource type="Script" path="res://ai/ai.gd" id="1_h6tvt"]
[ext_resource type="Texture2D" uid="uid://cx3k1e1atqee1" path="res://assests/Background Empty.png" id="1_tlf7j"]
[ext_resource type="Script" path="res://ai/Script/player_1.gd" id="3_7je56"]
[ext_resource type="Texture2D" uid="uid://xvr2xe6c34f3" path="res://assests/Paddle_1.png" id="3_f3sgb"]
[ext_resource type="Script" path="res://ai/Script/ai.gd" id="4_gdhrq"]
[ext_resource type="Script" path="res://ai/Script/ball.gd" id="5_bhmpm"]
[ext_resource type="Texture2D" uid="uid://bixpgbts4av0t" path="res://assests/Paddle_2.png" id="5_smr5x"]
[ext_resource type="Texture2D" uid="uid://csi4o0sx28nhk" path="res://assests/Ball.png" id="7_311fs"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ahjtj"]
size = Vector2(15.5556, 106.222)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m73j4"]
size = Vector2(14.4444, 105.556)

[sub_resource type="CircleShape2D" id="CircleShape2D_owuyt"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w232i"]
size = Vector2(1089.44, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xlgyu"]
size = Vector2(1088.89, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4o1tw"]
size = Vector2(26.6667, 541.667)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vxgdg"]
size = Vector2(20, 541.667)

[sub_resource type="SystemFont" id="SystemFont_72oua"]
font_names = PackedStringArray("Impact")

[sub_resource type="SystemFont" id="SystemFont_ocdii"]
font_names = PackedStringArray("Impact")

[node name="AI" type="Sprite2D"]
texture_filter = 1
scale = Vector2(0.9, 0.9)
texture = ExtResource("1_tlf7j")
centered = false
script = ExtResource("1_h6tvt")

[node name="Player1" type="StaticBody2D" parent="."]
position = Vector2(151.111, 355.556)
script = ExtResource("3_7je56")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="Player1"]
texture_filter = 1
texture = ExtResource("3_f3sgb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player1"]
position = Vector2(-2.6491e-07, 0.888894)
shape = SubResource("RectangleShape2D_ahjtj")

[node name="ai" type="StaticBody2D" parent="."]
position = Vector2(1128.89, 355.556)
script = ExtResource("4_gdhrq")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="ai"]
texture_filter = 1
texture = ExtResource("5_smr5x")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ai"]
position = Vector2(0.555556, 0.555553)
shape = SubResource("RectangleShape2D_m73j4")

[node name="ball" type="RigidBody2D" parent="."]
position = Vector2(640, 355.556)
collision_mask = 3
mass = 0.001
gravity_scale = 0.0
script = ExtResource("5_bhmpm")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="ball"]
texture_filter = 1
texture = ExtResource("7_311fs")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ball"]
shape = SubResource("CircleShape2D_owuyt")

[node name="border" type="StaticBody2D" parent="."]
collision_layer = 2
metadata/_edit_group_ = true

[node name="top" type="CollisionShape2D" parent="border"]
position = Vector2(640, 78.8889)
shape = SubResource("RectangleShape2D_w232i")

[node name="bottom" type="CollisionShape2D" parent="border"]
position = Vector2(640, 640)
shape = SubResource("RectangleShape2D_xlgyu")

[node name="left" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="left"]
position = Vector2(82.2222, 359.167)
shape = SubResource("RectangleShape2D_4o1tw")

[node name="right" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="right"]
position = Vector2(1194.44, 359.167)
shape = SubResource("RectangleShape2D_vxgdg")

[node name="HUD" type="CanvasLayer" parent="."]

[node name="P1_score" type="Label" parent="HUD"]
offset_left = 526.0
offset_top = 73.0
offset_right = 566.0
offset_bottom = 135.0
theme_override_fonts/font = SubResource("SystemFont_72oua")
theme_override_font_sizes/font_size = 50
text = "0"

[node name="ai_score" type="Label" parent="HUD"]
offset_left = 601.0
offset_top = 74.0
offset_right = 641.0
offset_bottom = 136.0
theme_override_fonts/font = SubResource("SystemFont_ocdii")
theme_override_font_sizes/font_size = 50
text = "0"

[node name="ball_Timer" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="body_entered" from="left" to="." method="_on_left_body_entered"]
[connection signal="body_entered" from="right" to="." method="_on_right_body_entered"]
[connection signal="timeout" from="ball_Timer" to="." method="_on_ball_timer_timeout"]
